samples/_failures_safe/1761713791_2f3c4e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9e8ae6bb.c: In function ‘tokenize’:
./samples/SAFE/__tmp_9e8ae6bb.c:172:9: error: ‘strnc’ undeclared (first use in this function); did you mean ‘strncmp’?
  172 |         strnc
      |         ^~~~~
      |         strncmp
./samples/SAFE/__tmp_9e8ae6bb.c:172:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_9e8ae6bb.c:172:14: error: expected ‘;’ at end of input
  172 |         strnc
      |              ^
      |              ;
./samples/SAFE/__tmp_9e8ae6bb.c:172:9: error: expected declaration or statement at end of input
  172 |         strnc
      |         ^~~~~
./samples/SAFE/__tmp_9e8ae6bb.c:172:9: error: expected declaration or statement at end of input
